QUIC transport, LSB character creation alignment
QUIC transport:
- Replace TCP ServerSocket with Netty NioDatagramChannel + QuicServerCodecBuilder
  (QuicServerTransport.java) using self-signed TLS cert, protocol 'ffxi-1'
- Replace per-request Socket in client with persistent QuicChannel + per-request
  bidirectional stream (QuicGateway.java); auto-reconnects on host/port change
- RemoteGateway now delegates to QuicGateway; adds shutdown() for clean teardown
- Add netty-incubator-codec-native-quic linux-x86_64 runtime dep to client pom

LSB character creation alignment:
- Race encoding: 1-8 matches LSB (1=HumeM,2=HumeF,3=ElvaanM,4=ElvaanF,
  5=TaruM,6=TaruF,7=Mithra,8=Galka); gender encoded in race, no separate col
- Body size: 0=Small/1=Medium/2=Large; Tarutaru forced Small, Galka forced Large
- Face: 0-15 (face 1-8 × A/B hair variant)
- Starting job: 1=WAR 2=MNK 3=WHM 4=BLM 5=RDM 6=THF (LSB clamp 1-6)
- Nation: 0=Sandy 1=Bastok 2=Windurst; random zone selection per nation on create
- character_jobs table added (per-job level storage, mirrors LSB char_jobs)
- Client form updated: race/size/face-AB/job/nation combos
- Docker init schema and server DDL updated

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>