@@ -19,47 +19,41 @@ import java.util.List;
 import org.lwjgl.glfw.GLFWErrorCallback;
 import org.lwjgl.opengl.GL;
 
-import static org.lwjgl.glfw.GLFW.GLFW_CONTEXT_VERSION_MAJOR;
-import static org.lwjgl.glfw.GLFW.GLFW_CONTEXT_VERSION_MINOR;
-import static org.lwjgl.glfw.GLFW.GLFW_FALSE;
-import static org.lwjgl.glfw.GLFW.GLFW_OPENGL_CORE_PROFILE;
-import static org.lwjgl.glfw.GLFW.GLFW_OPENGL_PROFILE;
-import static org.lwjgl.glfw.GLFW.GLFW_VISIBLE;
-import static org.lwjgl.glfw.GLFW.glfwCreateWindow;
-import static org.lwjgl.glfw.GLFW.glfwDestroyWindow;
-import static org.lwjgl.glfw.GLFW.glfwGetFramebufferSize;
-import static org.lwjgl.glfw.GLFW.glfwInit;
-import static org.lwjgl.glfw.GLFW.glfwMakeContextCurrent;
-import static org.lwjgl.glfw.GLFW.glfwPollEvents;
-import static org.lwjgl.glfw.GLFW.glfwSetErrorCallback;
-import static org.lwjgl.glfw.GLFW.glfwShowWindow;
-import static org.lwjgl.glfw.GLFW.glfwSwapBuffers;
-import static org.lwjgl.glfw.GLFW.glfwSwapInterval;
-import static org.lwjgl.glfw.GLFW.glfwTerminate;
-import static org.lwjgl.glfw.GLFW.glfwWindowHint;
-import static org.lwjgl.glfw.GLFW.glfwWindowShouldClose;
-import static org.lwjgl.opengl.GL11.GL_COLOR_BUFFER_BIT;
-import static org.lwjgl.opengl.GL11.glClear;
-import static org.lwjgl.opengl.GL11.glClearColor;
-import static org.lwjgl.opengl.GL11.glViewport;
+import static org.lwjgl.glfw.GLFW.*;
+import static org.lwjgl.opengl.GL11.*;
 import static org.lwjgl.system.MemoryUtil.NULL;
 
 public final class ClientMain {
     private static final DateTimeFormatter TIME_FMT = DateTimeFormatter.ofPattern("HH:mm:ss");
     private static final long KEEPALIVE_INTERVAL_MS = 5_000L;
-    private static final String[] STARTING_CITIES = {"BASTOK", "SANDORIA", "WINDURST"};
-    private static final String[] RACE_OPTIONS = {"Hume", "Elvaan", "Tarutaru", "Mithra", "Galka"};
-    private static final String[] GENDER_OPTIONS = {"Male", "Female"};
+
+    // LSB race encoding 1-8 (encodes gender)
+    private static final String[] RACE_LABELS = {
+        "Hume Male", "Hume Female",
+        "Elvaan Male", "Elvaan Female",
+        "Tarutaru Male", "Tarutaru Female",
+        "Mithra", "Galka"
+    };
+    // size: 0=Small 1=Medium 2=Large
+    private static final String[] SIZE_LABELS   = {"Small", "Medium", "Large"};
+    // Starting jobs 1-6
+    private static final String[] JOB_LABELS    = {"Warrior", "Monk", "White Mage", "Black Mage", "Red Mage", "Thief"};
+    private static final String[] NATION_LABELS = {"San d'Oria", "Bastok", "Windurst"};
+
+    // Tarutaru (idx 4,5) forced Small; Galka (idx 7) forced Large
+    private static final int[] RACE_FORCED_SIZE = {-1, -1, -1, -1, 0, 0, -1, 2};
 
     private final ImString host = new ImString("127.0.0.1", 128);
-    private final ImInt port = new ImInt(35555);
+    private final ImInt   portField = new ImInt(35555);
     private final ImString username = new ImString("dev", 64);
     private final ImString password = new ImString("dev", 64);
-    private final ImString newCharacterName = new ImString("", 32);
-    private final ImInt raceIndex = new ImInt(0);
-    private final ImInt genderIndex = new ImInt(0);
-    private final ImInt face = new ImInt(1);
-    private final ImInt cityIndex = new ImInt(0);
+    private final ImString newCharName = new ImString("", 32);
+    private final ImInt    raceIndex  = new ImInt(0);
+    private final ImInt    sizeIndex  = new ImInt(1);
+    private final ImInt    faceNum    = new ImInt(1);  // 1-8
+    private final ImBoolean faceVariantB = new ImBoolean(false); // false=A, true=B
+    private final ImInt    jobIndex   = new ImInt(0);
+    private final ImInt    nationIndex = new ImInt(0);
     private final ImBoolean autoScroll = new ImBoolean(true);
 
     private final List<String> logs = new ArrayList<>();
@@ -69,14 +63,14 @@ public final class ClientMain {
     private String status = "Not connected";
     private String authToken = "-";
     private String accountId = "-";
-    private String selectedCharacterId = "-";
-    private String selectedCharacterName = "-";
-    private String sessionId = "-";
+    private String selectedCharId   = "-";
+    private String selectedCharName = "-";
+    private String sessionId  = "-";
     private String keepAliveStatus = "idle";
-    private boolean createCharacterFormVisible = false;
-    private long lastKeepAliveAtMs = 0L;
-    private long lastKeepAliveOkAtMs = 0L;
-    private long lastKeepAliveLatencyMs = -1L;
+    private boolean createFormVisible = false;
+    private long lastPingAtMs   = 0L;
+    private long lastPingOkAtMs = 0L;
+    private long lastPingRttMs  = -1L;
 
     public static void main(String[] args) {
         new ClientMain().run();
@@ -84,20 +78,14 @@ public final class ClientMain {
 
     private void run() {
         GLFWErrorCallback.createPrint(System.err).set();
-        if (!glfwInit()) {
-            throw new IllegalStateException("Unable to initialize GLFW");
-        }
-
+        if (!glfwInit()) throw new IllegalStateException("Unable to initialize GLFW");
         glfwWindowHint(GLFW_CONTEXT_VERSION_MAJOR, 3);
         glfwWindowHint(GLFW_CONTEXT_VERSION_MINOR, 2);
         glfwWindowHint(GLFW_OPENGL_PROFILE, GLFW_OPENGL_CORE_PROFILE);
         glfwWindowHint(GLFW_VISIBLE, GLFW_FALSE);
 
-        long window = glfwCreateWindow(1280, 720, "FFXI Minimal Client", NULL, NULL);
-        if (window == NULL) {
-            throw new IllegalStateException("Failed to create GLFW window");
-        }
-
+        long window = glfwCreateWindow(1280, 720, "FFXI Client", NULL, NULL);
+        if (window == NULL) throw new IllegalStateException("Failed to create GLFW window");
         glfwMakeContextCurrent(window);
         glfwSwapInterval(1);
         glfwShowWindow(window);
@@ -106,86 +94,81 @@ public final class ClientMain {
         ImGui.createContext();
         ImGuiIO io = ImGui.getIO();
         io.setIniFilename(null);
+        ImGuiImplGlfw implGlfw = new ImGuiImplGlfw();
+        ImGuiImplGl3  implGl3  = new ImGuiImplGl3();
+        implGlfw.init(window, true);
+        implGl3.init("#version 150");
 
-        ImGuiImplGlfw imGuiGlfw = new ImGuiImplGlfw();
-        ImGuiImplGl3 imGuiGl3 = new ImGuiImplGl3();
-        imGuiGlfw.init(window, true);
-        imGuiGl3.init("#version 150");
-
-        log("Client started in LOCAL mode");
-        log(quicStackStatus());
+        log("Client started (QUIC transport)");
+        try {
+            Class.forName("io.netty.incubator.codec.quic.Quic");
+            log("QUIC stack: Netty incubator classes available");
+        } catch (ClassNotFoundException e) {
+            log("QUIC stack missing from classpath");
+        }
 
         while (!glfwWindowShouldClose(window)) {
             glfwPollEvents();
             maybeKeepAlive();
-            imGuiGlfw.newFrame();
+            implGlfw.newFrame();
             ImGui.newFrame();
-
             drawControlWindow();
             drawLogWindow();
-
             ImGui.render();
-            int[] width = new int[1];
-            int[] height = new int[1];
-            glfwGetFramebufferSize(window, width, height);
-            glViewport(0, 0, width[0], height[0]);
-            glClearColor(0.07f, 0.07f, 0.09f, 1.0f);
+            int[] w = new int[1], h = new int[1];
+            glfwGetFramebufferSize(window, w, h);
+            glViewport(0, 0, w[0], h[0]);
+            glClearColor(0.07f, 0.07f, 0.09f, 1f);
             glClear(GL_COLOR_BUFFER_BIT);
-            imGuiGl3.renderDrawData(ImGui.getDrawData());
+            implGl3.renderDrawData(ImGui.getDrawData());
             glfwSwapBuffers(window);
         }
 
         gracefulDisconnect("window close");
-
-        imGuiGl3.dispose();
-        imGuiGlfw.dispose();
+        RemoteGateway.shutdown();
+        implGl3.dispose();
+        implGlfw.dispose();
         ImGui.destroyContext();
         glfwDestroyWindow(window);
         glfwTerminate();
-
-        GLFWErrorCallback callback = glfwSetErrorCallback(null);
-        if (callback != null) {
-            callback.free();
-        }
+        GLFWErrorCallback cb = glfwSetErrorCallback(null);
+        if (cb != null) cb.free();
     }
+
+    // ── UI ──────────────────────────────────────────────────────────────────
 
     private void drawControlWindow() {
         ImGui.setNextWindowPos(20, 20, ImGuiCond.Once);
-        ImGui.setNextWindowSize(760, 520, ImGuiCond.Once);
-        ImGui.begin("Milestone 1 Client");
+        ImGui.setNextWindowSize(760, 600, ImGuiCond.Once);
+        ImGui.begin("FFXI Client");
 
         if (ImGui.radioButton("Local Mode", mode == RuntimeMode.LOCAL)) {
-            gracefulDisconnect("mode switch to local");
+            gracefulDisconnect("mode switch");
             mode = RuntimeMode.LOCAL;
             clearRemoteAuth();
             status = "Local mode";
-            keepAliveStatus = "offline";
-            log("Switched runtime mode to LOCAL");
+            log("Switched to LOCAL mode");
         }
         ImGui.sameLine();
         if (ImGui.radioButton("Remote Mode", mode == RuntimeMode.REMOTE)) {
             mode = RuntimeMode.REMOTE;
             status = "Remote mode";
             keepAliveStatus = "waiting for login";
-            log("Switched runtime mode to REMOTE");
+            log("Switched to REMOTE mode");
         }
 
         ImGui.separator();
-        if (mode == RuntimeMode.REMOTE && hasAuthToken()) {
-            ImGui.beginDisabled();
-        }
+        boolean locked = mode == RuntimeMode.REMOTE && hasAuthToken();
+        if (locked) ImGui.beginDisabled();
         ImGui.inputText("Host", host);
-        ImGui.inputInt("Port", port);
-        if (mode == RuntimeMode.REMOTE && hasAuthToken()) {
-            ImGui.endDisabled();
-        }
+        ImGui.inputInt("Port", portField);
+        if (locked) ImGui.endDisabled();
 
         if (mode == RuntimeMode.LOCAL) {
             if (ImGui.button("Enter Local Zone")) {
-                status = "Local zone loaded: zone=230 char=LocalDev";
                 sessionId = "LOCAL-" + System.currentTimeMillis();
-                keepAliveStatus = "offline";
-                log("Entered local-only zone bootstrap with preset character LocalDev");
+                status = "Local zone loaded (zone=230, char=LocalDev)";
+                log("Entered local-only zone");
             }
         } else {
             drawRemoteControls();
@@ -196,11 +179,11 @@ public final class ClientMain {
         ImGui.text("Status: " + status);
         ImGui.text("Account: " + accountId);
         ImGui.text("Auth Token: " + (hasAuthToken() ? "<set>" : "<none>"));
-        ImGui.text("Selected Character: " + selectedCharacterName);
+        ImGui.text("Selected: " + selectedCharName);
         ImGui.text("Session: " + sessionId);
         ImGui.text("KeepAlive: " + keepAliveStatus);
-        ImGui.text("Last RTT: " + (lastKeepAliveLatencyMs >= 0 ? lastKeepAliveLatencyMs + "ms" : "-"));
-        ImGui.text("Last OK: " + (lastKeepAliveOkAtMs == 0 ? "-" : formatTime(lastKeepAliveOkAtMs)));
+        ImGui.text("Last RTT: " + (lastPingRttMs >= 0 ? lastPingRttMs + "ms" : "-"));
+        ImGui.text("Last OK: " + (lastPingOkAtMs == 0 ? "-" : formatTime(lastPingOkAtMs)));
         ImGui.end();
     }
 
@@ -208,145 +191,139 @@ public final class ClientMain {
         if (!hasAuthToken()) {
             ImGui.inputText("Username", username);
             ImGui.inputText("Password", password);
-            if (ImGui.button("Login Remote")) {
-                doRemoteLogin();
-            }
+            if (ImGui.button("Login")) doLogin();
             return;
         }
 
-        if (hasActiveRemoteSession()) {
-            ImGui.text("In game as: " + selectedCharacterName);
+        if (hasActiveSession()) {
+            ImGui.text("In game as: " + selectedCharName);
             ImGui.separator();
-            if (ImGui.button("Ping now")) {
-                sendKeepAlive();
-            }
+            if (ImGui.button("Ping"))   sendPing();
             ImGui.sameLine();
-            if (ImGui.button("Logout Session")) {
-                logoutRemoteSession();
-            }
+            if (ImGui.button("Logout")) logoutSession();
             return;
         }
 
-        if (ImGui.button("Refresh Characters")) {
-            refreshCharacters();
-        }
+        if (ImGui.button("Refresh")) refreshCharacters();
         ImGui.sameLine();
         if (ImGui.button("Sign Out")) {
             gracefulDisconnect("sign out");
             clearRemoteAuth();
-            status = "Signed out";
-            log("Signed out of remote account");
+            log("Signed out");
         }
 
         ImGui.separator();
-        if (!createCharacterFormVisible) {
+        if (!createFormVisible) {
             if (ImGui.button("Create Character")) {
-                createCharacterFormVisible = true;
+                createFormVisible = true;
             }
         } else {
-            ImGui.text("Create Character");
-            ImGui.inputText("Name", newCharacterName);
-            ImGui.combo("Race", raceIndex, RACE_OPTIONS);
-            if (isMithraSelected()) {
-                genderIndex.set(1);
-                ImGui.text("Gender: Female (Mithra only)");
-            } else if (isGalkaSelected()) {
-                genderIndex.set(0);
-                ImGui.text("Gender: Male (Galka only)");
-            } else {
-                ImGui.combo("Gender", genderIndex, GENDER_OPTIONS);
-            }
-            ImGui.inputInt("Face (1-8)", face);
-            ImGui.combo("Starting City", cityIndex, STARTING_CITIES);
-            if (ImGui.button("Create")) {
-                createCharacter();
-            }
-            ImGui.sameLine();
-            if (ImGui.button("Cancel")) {
-                createCharacterFormVisible = false;
-            }
+            drawCreateForm();
         }
 
         ImGui.separator();
-        ImGui.text("Characters");
+        ImGui.text("Characters:");
         if (characters.isEmpty()) {
-            ImGui.textDisabled("No characters yet.");
+            ImGui.textDisabled("No characters.");
         } else {
             for (RemoteCharacter rc : characters) {
-                ImGui.text("[" + rc.characterId() + "] " + rc.name()
-                    + " race=" + rc.raceName() + " gender=" + rc.gender() + " face=" + rc.face()
-                    + " city=" + rc.startingCity());
+                ImGui.text(String.format("[%s] %s  %s  size=%d  face=%d  job=%s  nation=%s",
+                    rc.characterId(), rc.name(), rc.raceName(),
+                    rc.size(), rc.face(), rc.jobName(), rc.nationName()));
                 ImGui.sameLine();
-                if (ImGui.smallButton("Select##" + rc.characterId())) {
-                    selectCharacter(rc.characterId(), rc.name());
-                }
+                if (ImGui.smallButton("Select##" + rc.characterId())) selectCharacter(rc);
                 ImGui.sameLine();
-                if (ImGui.smallButton("Delete##" + rc.characterId())) {
-                    deleteCharacter(rc.characterId(), rc.name());
-                }
+                if (ImGui.smallButton("Delete##" + rc.characterId())) deleteCharacter(rc.characterId(), rc.name());
             }
         }
 
         if (hasSelectedCharacter()) {
             ImGui.separator();
-            if (ImGui.button("Play")) {
-                playSelectedCharacter();
-            }
+            if (ImGui.button("Play")) playSelectedCharacter();
             ImGui.sameLine();
-            ImGui.text("Ready: " + selectedCharacterName);
+            ImGui.text("Ready: " + selectedCharName);
         }
     }
 
-    private void doRemoteLogin() {
+    private void drawCreateForm() {
+        ImGui.text("Create Character");
+        ImGui.inputText("Name", newCharName);
+
+        // Race (1-8 LSB, index 0-7)
+        ImGui.combo("Race", raceIndex, RACE_LABELS);
+
+        // Size — auto-lock for Tarutaru/Galka
+        int forcedSize = RACE_FORCED_SIZE[raceIndex.get()];
+        if (forcedSize >= 0) {
+            sizeIndex.set(forcedSize);
+            ImGui.text("Size: " + SIZE_LABELS[forcedSize] + " (fixed for this race)");
+        } else {
+            ImGui.combo("Size", sizeIndex, SIZE_LABELS);
+        }
+
+        // Face 1-8 + A/B toggle → wire as 0-15
+        ImGui.inputInt("Face (1-8)", faceNum);
+        ImGui.sameLine();
+        ImGui.checkbox("Variant B", faceVariantB);
+
+        // Starting Job
+        ImGui.combo("Starting Job", jobIndex, JOB_LABELS);
+
+        // Nation
+        ImGui.combo("Nation", nationIndex, NATION_LABELS);
+
+        if (ImGui.button("Create")) createCharacter();
+        ImGui.sameLine();
+        if (ImGui.button("Cancel")) createFormVisible = false;
+    }
+
+    // ── Actions ─────────────────────────────────────────────────────────────
+
+    private void doLogin() {
         try {
-            MessageFrame frame = RemoteGateway.login(host.get(), port.get(), username.get(), password.get());
-            if ("LOGIN_OK".equals(frame.type())) {
-                authToken = frame.get("authToken");
-                accountId = frame.get("accountId");
-                selectedCharacterId = "-";
-                selectedCharacterName = "-";
-                createCharacterFormVisible = false;
-                status = "Authenticated. Select or create a character.";
-                keepAliveStatus = "waiting for character select";
-                log("LOGIN_OK account=" + accountId + " authToken=<set>");
+            MessageFrame f = RemoteGateway.login(host.get(), portField.get(), username.get(), password.get());
+            if ("LOGIN_OK".equals(f.type())) {
+                authToken = f.get("authToken");
+                accountId = f.get("accountId");
+                createFormVisible = false;
+                status = "Authenticated";
+                log("LOGIN_OK account=" + accountId);
                 refreshCharacters();
             } else {
-                status = frame.get("code") + ": " + frame.get("message");
-                clearRemoteAuth();
-                log("LOGIN_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
+                status = f.get("code") + ": " + f.get("message");
+                log("LOGIN_ERR " + f.get("code") + " " + f.get("message"));
             }
         } catch (Exception e) {
-            status = "Connection error";
-            clearRemoteAuth();
-            log("ERROR remote login failed: " + e.getMessage());
+            status = "Login failed";
+            log("LOGIN_ERR " + e.getMessage());
         }
     }
 
     private void refreshCharacters() {
-        if (!hasAuthToken()) {
-            return;
-        }
+        if (!hasAuthToken()) return;
         try {
-            MessageFrame frame = RemoteGateway.listCharacters(host.get(), port.get(), authToken);
-            if (!"CHAR_LIST_OK".equals(frame.type())) {
-                status = frame.get("code") + ": " + frame.get("message");
-                log("CHAR_LIST_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
+            MessageFrame f = RemoteGateway.listCharacters(host.get(), portField.get(), authToken);
+            if (!"CHAR_LIST_OK".equals(f.type())) {
+                status = f.get("code") + ": " + f.get("message");
+                log("CHAR_LIST_ERR " + f.get("code"));
                 return;
             }
-
             characters.clear();
-            int count = parseInt(frame.get("count"), 0);
+            int count = parseInt(f.get("count"), 0);
             for (int i = 0; i < count; i++) {
                 characters.add(new RemoteCharacter(
-                    frame.get("char" + i + "_id"),
-                    frame.get("char" + i + "_name"),
-                    normalizeRaceName(frame.get("char" + i + "_raceName"), parseInt(frame.get("char" + i + "_race"), 0)),
-                    normalizeGender(frame.get("char" + i + "_gender")),
-                    parseInt(frame.get("char" + i + "_face"), 1),
-                    frame.get("char" + i + "_city")
+                    f.get("char" + i + "_id"),
+                    f.get("char" + i + "_name"),
+                    parseInt(f.get("char" + i + "_race"), 1),
+                    f.get("char" + i + "_raceName"),
+                    parseInt(f.get("char" + i + "_size"), 1),
+                    parseInt(f.get("char" + i + "_face"), 0),
+                    parseInt(f.get("char" + i + "_mainJob"), 1),
+                    f.get("char" + i + "_jobName"),
+                    parseInt(f.get("char" + i + "_nation"), 0)
                 ));
             }
-            status = "Character list refreshed (" + characters.size() + ")";
+            status = "Characters loaded (" + characters.size() + ")";
             log("CHAR_LIST_OK count=" + characters.size());
         } catch (Exception e) {
             status = "Character list error";
@@ -355,128 +332,115 @@ public final class ClientMain {
     }
 
     private void createCharacter() {
-        if (!hasAuthToken() || hasActiveRemoteSession()) {
-            return;
-        }
-        String name = newCharacterName.get();
-        String raceName = raceWireValue(raceIndex.get());
-        String gender = genderWireValue(genderIndex.get());
-        int f = face.get();
-        String city = STARTING_CITIES[Math.max(0, Math.min(cityIndex.get(), STARTING_CITIES.length - 1))];
+        if (!hasAuthToken() || hasActiveSession()) return;
+        int raceId  = raceIndex.get() + 1;            // UI index 0-7 → LSB 1-8
+        int sizeId  = sizeIndex.get();                 // 0-2
+        int faceId  = Math.clamp(faceNum.get(), 1, 8) - 1 + (faceVariantB.get() ? 8 : 0); // 0-15
+        int jobId   = jobIndex.get() + 1;              // UI index 0-5 → job 1-6
+        int nationId = nationIndex.get();              // 0-2
         try {
-            MessageFrame frame = RemoteGateway.createCharacter(host.get(), port.get(), authToken, name, raceName, gender, f, city);
-            if ("CHAR_CREATE_OK".equals(frame.type())) {
-                status = "Character created: " + frame.get("name");
-                log("CHAR_CREATE_OK id=" + frame.get("characterId") + " name=" + frame.get("name"));
-                newCharacterName.set("");
-                createCharacterFormVisible = false;
+            MessageFrame f = RemoteGateway.createCharacter(
+                host.get(), portField.get(), authToken,
+                newCharName.get(), raceId, sizeId, faceId, jobId, Integer.toString(nationId));
+            if ("CHAR_CREATE_OK".equals(f.type())) {
+                status = "Character created: " + f.get("name");
+                log("CHAR_CREATE_OK id=" + f.get("characterId") + " name=" + f.get("name"));
+                newCharName.set("");
+                createFormVisible = false;
                 refreshCharacters();
             } else {
-                status = frame.get("code") + ": " + frame.get("message");
-                log("CHAR_CREATE_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
+                status = f.get("code") + ": " + f.get("message");
+                log("CHAR_CREATE_ERR " + f.get("code") + " " + f.get("message"));
             }
         } catch (Exception e) {
-            status = "Character create error";
+            status = "Create failed";
             log("CHAR_CREATE_ERR " + e.getMessage());
         }
     }
 
-    private void deleteCharacter(String characterId, String characterName) {
-        if (!hasAuthToken() || hasActiveRemoteSession()) {
-            return;
-        }
+    private void deleteCharacter(String characterId, String charName) {
+        if (!hasAuthToken() || hasActiveSession()) return;
         try {
-            MessageFrame frame = RemoteGateway.deleteCharacter(host.get(), port.get(), authToken, characterId);
-            if ("CHAR_DELETE_OK".equals(frame.type())) {
-                status = "Character deleted: " + characterName;
-                log("CHAR_DELETE_OK id=" + characterId + " name=" + characterName);
-                if (characterId.equals(selectedCharacterId)) {
-                    selectedCharacterId = "-";
-                    selectedCharacterName = "-";
+            MessageFrame f = RemoteGateway.deleteCharacter(host.get(), portField.get(), authToken, characterId);
+            if ("CHAR_DELETE_OK".equals(f.type())) {
+                if (characterId.equals(selectedCharId)) {
+                    selectedCharId = "-";
+                    selectedCharName = "-";
                 }
+                status = "Deleted: " + charName;
+                log("CHAR_DELETE_OK id=" + characterId);
                 refreshCharacters();
             } else {
-                status = frame.get("code") + ": " + frame.get("message");
-                log("CHAR_DELETE_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
+                status = f.get("code") + ": " + f.get("message");
+                log("CHAR_DELETE_ERR " + f.get("code"));
             }
         } catch (Exception e) {
-            status = "Character delete error";
+            status = "Delete failed";
             log("CHAR_DELETE_ERR " + e.getMessage());
         }
     }
 
-    private void selectCharacter(String characterId, String characterName) {
-        if (!hasAuthToken() || hasActiveRemoteSession()) {
-            return;
-        }
+    private void selectCharacter(RemoteCharacter rc) {
+        if (!hasAuthToken() || hasActiveSession()) return;
         try {
-            MessageFrame frame = RemoteGateway.selectCharacter(host.get(), port.get(), authToken, characterId);
-            if ("CHAR_SELECT_OK".equals(frame.type())) {
-                selectedCharacterId = characterId;
-                selectedCharacterName = characterName;
-                status = "Character selected: " + characterName;
+            MessageFrame f = RemoteGateway.selectCharacter(host.get(), portField.get(), authToken, rc.characterId());
+            if ("CHAR_SELECT_OK".equals(f.type())) {
+                selectedCharId   = rc.characterId();
+                selectedCharName = rc.name();
+                status = "Selected: " + rc.name();
                 keepAliveStatus = "ready to play";
-                log("CHAR_SELECT_OK character=" + characterName + " zone=" + frame.get("currentZoneId") + " (awaiting Play)");
+                log("CHAR_SELECT_OK " + rc.name() + " zone=" + f.get("currentZoneId"));
             } else {
-                status = frame.get("code") + ": " + frame.get("message");
-                log("CHAR_SELECT_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
+                status = f.get("code") + ": " + f.get("message");
+                log("CHAR_SELECT_ERR " + f.get("code"));
             }
         } catch (Exception e) {
-            status = "Character select error";
+            status = "Select failed";
             log("CHAR_SELECT_ERR " + e.getMessage());
         }
     }
 
     private void playSelectedCharacter() {
-        if (!hasAuthToken() || !hasSelectedCharacter() || hasActiveRemoteSession()) {
-            return;
-        }
+        if (!hasAuthToken() || !hasSelectedCharacter() || hasActiveSession()) return;
         try {
-            MessageFrame frame = RemoteGateway.play(host.get(), port.get(), authToken, selectedCharacterId);
-            if ("PLAY_OK".equals(frame.type())) {
-                sessionId = frame.get("sessionId");
+            MessageFrame f = RemoteGateway.play(host.get(), portField.get(), authToken, selectedCharId);
+            if ("PLAY_OK".equals(f.type())) {
+                sessionId = f.get("sessionId");
                 keepAliveStatus = "connected";
-                lastKeepAliveAtMs = 0L;
-                status = "Playing as " + selectedCharacterName;
-                log("PLAY_OK session=" + sessionId + " zone=" + frame.get("zoneId")
-                    + " playersInZone=" + frame.get("playersInZone"));
+                lastPingAtMs = 0L;
+                status = "Playing as " + selectedCharName;
+                log("PLAY_OK session=" + sessionId + " zone=" + f.get("zoneId")
+                    + " playersInZone=" + f.get("playersInZone"));
             } else {
-                status = frame.get("code") + ": " + frame.get("message");
-                log("PLAY_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
+                status = f.get("code") + ": " + f.get("message");
+                log("PLAY_ERR " + f.get("code"));
             }
         } catch (Exception e) {
-            status = "Play request error";
+            status = "Play failed";
             log("PLAY_ERR " + e.getMessage());
         }
     }
 
     private void maybeKeepAlive() {
-        if (mode != RuntimeMode.REMOTE || !hasActiveRemoteSession()) {
-            return;
-        }
-        long now = System.currentTimeMillis();
-        if (now - lastKeepAliveAtMs >= KEEPALIVE_INTERVAL_MS) {
-            sendKeepAlive();
-        }
+        if (mode != RuntimeMode.REMOTE || !hasActiveSession()) return;
+        if (System.currentTimeMillis() - lastPingAtMs >= KEEPALIVE_INTERVAL_MS) sendPing();
     }
 
-    private void sendKeepAlive() {
-        if (mode != RuntimeMode.REMOTE || !hasActiveRemoteSession()) {
-            return;
-        }
-        long startedAt = System.currentTimeMillis();
-        lastKeepAliveAtMs = startedAt;
+    private void sendPing() {
+        if (!hasActiveSession()) return;
+        long t0 = System.currentTimeMillis();
+        lastPingAtMs = t0;
         try {
-            MessageFrame frame = RemoteGateway.ping(host.get(), port.get(), sessionId);
-            long elapsed = System.currentTimeMillis() - startedAt;
-            if ("PONG".equals(frame.type())) {
+            MessageFrame f = RemoteGateway.ping(host.get(), portField.get(), sessionId);
+            long rtt = System.currentTimeMillis() - t0;
+            if ("PONG".equals(f.type())) {
                 keepAliveStatus = "ok";
-                lastKeepAliveOkAtMs = System.currentTimeMillis();
-                lastKeepAliveLatencyMs = elapsed;
-                log("PONG session=" + sessionId + " rtt=" + elapsed + "ms");
+                lastPingOkAtMs = System.currentTimeMillis();
+                lastPingRttMs  = rtt;
+                log("PONG session=" + sessionId + " rtt=" + rtt + "ms");
             } else {
-                keepAliveStatus = frame.get("code") + ": " + frame.get("message");
-                log("PING_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
+                keepAliveStatus = f.get("code");
+                log("PING_ERR " + f.get("code"));
             }
         } catch (Exception e) {
             keepAliveStatus = "failed";
@@ -484,168 +448,100 @@ public final class ClientMain {
         }
     }
 
-    private void logoutRemoteSession() {
-        if (!hasActiveRemoteSession()) {
-            return;
-        }
-        String activeSession = sessionId;
+    private void logoutSession() {
+        if (!hasActiveSession()) return;
+        String sid = sessionId;
         try {
-            MessageFrame frame = RemoteGateway.logout(host.get(), port.get(), activeSession);
-            if ("BYE".equals(frame.type())) {
-                log("LOGOUT_OK session=" + activeSession);
-            } else {
-                log("LOGOUT_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
-            }
+            MessageFrame f = RemoteGateway.logout(host.get(), portField.get(), sid);
+            log("LOGOUT " + ("BYE".equals(f.type()) ? "OK" : f.get("code")) + " session=" + sid);
         } catch (Exception e) {
             log("LOGOUT_ERR " + e.getMessage());
         } finally {
-            clearRemoteSessionState("Logged out");
+            clearSessionState("Logged out");
         }
     }
 
     private void gracefulDisconnect(String reason) {
-        if (!hasActiveRemoteSession()) {
-            return;
-        }
-        String activeSession = sessionId;
+        if (!hasActiveSession()) return;
+        String sid = sessionId;
         try {
-            MessageFrame frame = RemoteGateway.logout(host.get(), port.get(), activeSession);
-            if ("BYE".equals(frame.type())) {
-                log("GRACEFUL_DISCONNECT session=" + activeSession + " reason=" + reason);
-            } else {
-                log("GRACEFUL_DISCONNECT_ERR code=" + frame.get("code") + " message=" + frame.get("message"));
-            }
+            RemoteGateway.logout(host.get(), portField.get(), sid);
+            log("DISCONNECT session=" + sid + " reason=" + reason);
         } catch (Exception e) {
-            log("GRACEFUL_DISCONNECT_ERR " + e.getMessage());
+            log("DISCONNECT_ERR " + e.getMessage());
         } finally {
-            clearRemoteSessionState("Disconnected");
+            clearSessionState("Disconnected");
         }
     }
 
-    private boolean hasAuthToken() {
-        return authToken != null && !authToken.equals("-");
-    }
+    // ── State helpers ────────────────────────────────────────────────────────
 
-    private boolean hasActiveRemoteSession() {
+    private boolean hasAuthToken()      { return authToken != null && !authToken.equals("-"); }
+    private boolean hasSelectedCharacter() { return selectedCharId != null && !selectedCharId.equals("-"); }
+    private boolean hasActiveSession()  {
         return sessionId != null && !sessionId.equals("-") && mode == RuntimeMode.REMOTE;
-    }
-
-    private boolean hasSelectedCharacter() {
-        return selectedCharacterId != null && !selectedCharacterId.equals("-");
     }
 
     private void clearRemoteAuth() {
         authToken = "-";
         accountId = "-";
-        selectedCharacterId = "-";
-        selectedCharacterName = "-";
-        createCharacterFormVisible = false;
+        selectedCharId = "-";
+        selectedCharName = "-";
+        createFormVisible = false;
         characters.clear();
-        clearRemoteSessionState("Signed out");
+        clearSessionState("Signed out");
     }
 
-    private void clearRemoteSessionState(String newStatus) {
+    private void clearSessionState(String newStatus) {
         status = newStatus;
         sessionId = "-";
         keepAliveStatus = hasAuthToken() ? "waiting for character select" : "disconnected";
-        lastKeepAliveAtMs = 0L;
-        lastKeepAliveOkAtMs = 0L;
-        lastKeepAliveLatencyMs = -1L;
+        lastPingAtMs   = 0L;
+        lastPingOkAtMs = 0L;
+        lastPingRttMs  = -1L;
     }
+
+    // ── Log / debug window ───────────────────────────────────────────────────
 
     private void drawLogWindow() {
         ImGui.setNextWindowPos(800, 20, ImGuiCond.Once);
         ImGui.setNextWindowSize(460, 680, ImGuiCond.Once);
-        ImGui.begin("Debug Log Viewer");
+        ImGui.begin("Debug Log");
         ImGui.checkbox("Auto scroll", autoScroll);
         ImGui.sameLine();
-        if (ImGui.button("Clear")) {
-            logs.clear();
-        }
+        if (ImGui.button("Clear")) logs.clear();
         ImGui.separator();
         ImGui.beginChild("log-scroll");
-        for (String line : logs) {
-            ImGui.textUnformatted(line);
-        }
-        if (autoScroll.get()) {
-            ImGui.setScrollHereY(1f);
-        }
+        for (String line : logs) ImGui.textUnformatted(line);
+        if (autoScroll.get()) ImGui.setScrollHereY(1f);
         ImGui.endChild();
         ImGui.end();
     }
 
-    private void log(String message) {
-        logs.add("[" + LocalTime.now().format(TIME_FMT) + "] " + message);
+    private void log(String msg) {
+        logs.add("[" + LocalTime.now().format(TIME_FMT) + "] " + msg);
     }
 
     private String formatTime(long epochMs) {
         return Instant.ofEpochMilli(epochMs).atZone(ZoneId.systemDefault()).toLocalTime().format(TIME_FMT);
     }
 
-    private String quicStackStatus() {
-        try {
-            Class.forName("io.netty.incubator.codec.quic.Quic");
-            return "QUIC stack detected: Netty incubator codec classes available";
-        } catch (ClassNotFoundException e) {
-            return "QUIC stack missing from classpath";
+    private int parseInt(String v, int fallback) {
+        if (v == null) return fallback;
+        try { return Integer.parseInt(v); } catch (NumberFormatException e) { return fallback; }
+    }
+
+    // ── Data types ───────────────────────────────────────────────────────────
+
+    private record RemoteCharacter(
+        String characterId, String name,
+        int race, String raceName,
+        int size, int face,
+        int mainJob, String jobName,
+        int nation
+    ) {
+        String nationName() {
+            return switch (nation) { case 0 -> "Sandy"; case 1 -> "Bastok"; case 2 -> "Windurst"; default -> "?"; };
         }
-    }
-
-    private int parseInt(String value, int fallback) {
-        if (value == null) {
-            return fallback;
-        }
-        try {
-            return Integer.parseInt(value);
-        } catch (NumberFormatException e) {
-            return fallback;
-        }
-    }
-
-    private boolean isMithraSelected() {
-        return raceIndex.get() == 3;
-    }
-
-    private boolean isGalkaSelected() {
-        return raceIndex.get() == 4;
-    }
-
-    private String raceWireValue(int index) {
-        return switch (index) {
-            case 0 -> "HUME";
-            case 1 -> "ELVAAN";
-            case 2 -> "TARUTARU";
-            case 3 -> "MITHRA";
-            case 4 -> "GALKA";
-            default -> "HUME";
-        };
-    }
-
-    private String genderWireValue(int index) {
-        return index == 1 ? "F" : "M";
-    }
-
-    private String normalizeRaceName(String raceName, int fallbackRaceId) {
-        if (raceName != null && !raceName.isBlank()) {
-            return raceName;
-        }
-        return switch (fallbackRaceId) {
-            case 1 -> "HUME";
-            case 2 -> "ELVAAN";
-            case 3 -> "TARUTARU";
-            case 4 -> "MITHRA";
-            case 5 -> "GALKA";
-            default -> "UNKNOWN";
-        };
-    }
-
-    private String normalizeGender(String gender) {
-        if ("F".equalsIgnoreCase(gender)) {
-            return "F";
-        }
-        return "M";
-    }
-
-    private record RemoteCharacter(String characterId, String name, String raceName, String gender, int face, String startingCity) {
     }
 }
